# rancher-project-mapper

./: Cargo.toml  README.md  e2e.bats  metadata.yml
.github/workflows/: release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: policy.yaml  policyserver.yaml
fleet/: gitrepo.yaml
fleet/helm/: fleet.yaml  values.yaml
fleet/helm/chart/: values.yaml
fleet/helm/chart/templates/: _helpers.tpl  policyserver.yaml
src/: lib.rs  settings.rs
test_data/: namespace-disabled.json  namespace-enabled.json  namespace-foobar.json  pod-disabled.json  pod-enabled.json
