[package]
name = "kubewarden-namespace-mapper"
version = "0.1.0"
authors = ["Adam Toy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.15.0", default_features = false, features = ["v1_24"] }
kubewarden-policy-sdk = "0.6.0"
lazy_static = "1.4"
regex = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
